<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Good Wine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="updete">Update</string>
    <string name="create">Create</string>
    <string name="isOkDeleted">The record was deleted successfully.</string>
    <string name="isErrorDeleted">It had an error to try to delete the record.</string>
    <string name="isOkUpdate">The record was updated successfully.</string>
    <string name="isErrorUpdate">It had an error to try to updated the record.</string>
    
    <!-- options to the admin menu -->
    <string name="position_catalog">Position Catalog</string>
    <string name="position_name">Name:</string>
    <string name="position_description">Description:</string>
    <string name="position_status">Status:</string>
     

</resources>
